# zeal-lang

./: .gitignore  ;  Cargo.toml  README.md
test_scripts/: fib.zeal  funcs.zl  loops.zl
wrath/: Cargo.toml  README.md
wrath/src/: env.rs  interp.rs  lex.rs  main.rs  val.rs
zeal/: Cargo.toml  \
zeal-ast/: Cargo.toml
zeal-ast/src/: env.rs  err.rs  expr.rs  lex.rs  lib.rs  parse.rs
zeal-ast/src/passes/: mod.rs  rune.rs  sym.rs  typecheck.rs
zeal-core/: Cargo.toml
zeal-core/src/: buf.rs  bytes.rs  err.rs  htable.rs  lib.rs  mem.rs  rune.rs  str.rs  string.rs  val.rs  vec.rs
zeal-llvm/: Cargo.toml
zeal-llvm/src/: lib.rs
zeal.bak/: Cargo.toml
zeal.bak/src/: err.rs
zeal.bak/src/ast/: expr.rs  lex.rs
zeal.bak/src/compiler/: mod.rs  state.rs
zeal.bak/src/core_types/: num.rs  val.rs
zeal.bak/src/interp/: env.rs
zeal.bak/src/scripts/: fib.zeal  loops.zl
zeal.bak/src/sys/: mem.rs  mod.rs
zeal.bak/src/vm/: mod.rs  stack.rs
zeal/src/: ast.rs  env.rs  err.rs  interp.rs  lex.rs  lib.rs  main.rs  mem.rs  parse.rs  sys.rs  val.rs
zeal/src/ast/: expr.rs  lex.rs  mod.rs  parse.rs  reduce.rs
zeal/src/compiler/: chunk.rs  func.rs  mod.rs  opcode.rs  state.rs  unit.rs
zeal/src/core_types/: bytes.rs  func.rs  htable.rs  mod.rs  num.rs  str.rs  val.rs  vec.rs
zeal/src/interp/: eval.rs  mod.rs
zeal/src/meta/: mod.rs  sym.rs  types.rs
zeal/src/scripts/: calculator.zeal  fib.zeal  loops.zl
zeal/src/sys/: buf.rs  mem.rs  mod.rs
zeal/src/test/: mod.rs
zeal/src/test/scripts/: calc_vars.zeal
zeal/src/vm/: mod.rs  stack.rs
zvm/: Cargo.toml
zvm/src/: chunk.rs  compiler.rs  env.rs  err.rs  lib.rs  main.rs  native.rs  opcode.rs  stack.rs  state.rs  val.rs  vm.rs
