[package]
name = "wrath"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "libwrath"
# path = "./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = "4.5.4"
lazy_static = "1.4.0"
regex = "1.10.4"
rustyline = { version = "14.0.0", features = ["with-file-history"] }
