[package]
name = "zeal-ast"
version = "0.1.0"
edition = "2021"

[dependencies]
zeal-core = { path = "../zeal-core" }
logos = "0.14.0"
thiserror = "1.0.58"
anyhow = "1.0.82"
bytemuck = { version = "1.16.0", features = [
  "min_const_generics",
  "derive",
  "bytemuck_derive",
  "const_zeroed",
  "align_offset",
  "must_cast",
  "zeroable_atomics",
  "zeroable_maybe_uninit",
] }
clap = "4.5.4"
env_logger = "0.11.5"

log = "0.4.22"
lazy_static = "1.5.0"

[dev-dependencies]
env_logger = "0.11.5"
