[package]
name = "zeal-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
bytemuck = { version = "1.16.0", features = [
  "min_const_generics",
  "derive",
  "bytemuck_derive",
  "const_zeroed",
  "align_offset",
  "must_cast",
  "zeroable_atomics",
  "zeroable_maybe_uninit",
] }
clap = "4.5.4"
env_logger = "0.11.5"

inkwell = { version = "0.5.0", features = ["llvm18-0-prefer-static"] }
log = "0.4.22"

[dev-dependencies]
env_logger = "0.11.5"
